--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,7 +14,7 @@ jobs:
       contents: write
       pull-requests: read
       statuses: write
-    runs-on: macos-13 # multiprocessing in the documentation is only working on MacOS
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
