--- a/Project.toml
+++ b/Project.toml
@@ -54,13 +54,14 @@ BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
 Downloads = "1"
 GR = "0.71, 0.72, 0.73"
-GeoStats = "0.73.4"
-Huginn = "0.9.2"
+GeoStats = "0.73.4, 0.78"
+Huginn = "0.9.3"
 IJulia = "1.2"
 Infiltrator = "1.2"
 Interpolations = "0.15.1"
-JLD2 = "0.4"
+JLD2 = "0.4, 0.5"
 Lux = "1.8"
+Muninn = "0.6"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
 PlotThemes = "3.1"
@@ -69,6 +70,7 @@ Polynomials = "2, 3, 4"
 ProgressMeter = "1"
 Revise = "3.5"
 SciMLSensitivity = "7.20"
+Sleipnir = "0.9"
 Statistics = "1"
 Tullio = "0.3"
 julia = "1.10"
