--- a/Project.toml
+++ b/Project.toml
@@ -54,6 +54,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
 Downloads = "1"
+FastGaussQuadrature = "1"
 GR = "0.71, 0.72, 0.73"
 GeoStats = "0.73.4, 0.78"
 Huginn = "0.9.5"
