--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ JLD2 = "0.4, 0.5"
 Lux = "1.8"
 Muninn = "0.6"
 OrdinaryDiffEq = "6.90.1"
-OrdinaryDiffEqSymplecticRK = "=1.1.0"
+OrdinaryDiffEqSymplecticRK = "=1.1.0, 1"
 PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3, 4"
