CompatHelper: add new compat entry for LineSearches at version 7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -61,6 +61,7 @@ IJulia = "1.2"
 Infiltrator = "1.2"
 Interpolations = "0.15.1"
 JLD2 = "0.4, 0.5"
+LineSearches = "7"
 Lux = "1.8"
 Muninn = "0.6"
 OrdinaryDiffEq = "6.90.1"
