CompatHelper: add new compat entry for ImageFiltering at version 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -58,6 +58,7 @@ GR = "0.71, 0.72, 0.73"
 GeoStats = "0.73.4, 0.78"
 Huginn = "0.9.5"
 IJulia = "1.2"
+ImageFiltering = "0.7"
 Infiltrator = "1.2"
 Interpolations = "0.15.1"
 JLD2 = "0.4, 0.5"
