CompatHelper: add new compat entry for SciMLBase at version 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -70,6 +70,7 @@ Plots = "1.2"
 Polynomials = "2, 3, 4"
 ProgressMeter = "1"
 Revise = "3.5"
+SciMLBase = "2"
 SciMLSensitivity = "7.20"
 Sleipnir = "0.9"
 Statistics = "1"
