--- a/Project.toml
+++ b/Project.toml
@@ -63,6 +63,7 @@ Interpolations = "0.15.1"
 JLD2 = "0.4, 0.5"
 Lux = "1.8"
 Muninn = "0.6"
+Optim = "1"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
 PlotThemes = "3.1"
