CompatHelper: add new compat entry for MLUtils at version 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -62,6 +62,7 @@ Infiltrator = "1.2"
 Interpolations = "0.15.1"
 JLD2 = "0.4, 0.5"
 Lux = "1.8"
+MLUtils = "0.4"
 Muninn = "0.6"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
