--- a/Project.toml
+++ b/Project.toml
@@ -69,6 +69,7 @@ PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3, 4"
 ProgressMeter = "1"
+Reexport = "1"
 Revise = "3.5"
 SciMLSensitivity = "7.20"
 Sleipnir = "0.9"
