--- a/Project.toml
+++ b/Project.toml
@@ -53,6 +53,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
+ComponentArrays = "0.15"
 Downloads = "1"
 GR = "0.71, 0.72, 0.73"
 GeoStats = "0.73.4, 0.78"
