--- a/Project.toml
+++ b/Project.toml
@@ -53,27 +53,43 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
+ComponentArrays = "0.15"
 Downloads = "1"
+Enzyme = "0.13"
+EnzymeCore = "0.8"
+FastGaussQuadrature = "1"
+FiniteDifferences = "0.12"
 GR = "0.71, 0.72, 0.73"
 GeoStats = "0.73.4, 0.78"
 Huginn = "0.9.5"
 IJulia = "1.2"
+ImageFiltering = "0.7"
 Infiltrator = "1.2"
 Interpolations = "0.15.1"
 JLD2 = "0.4, 0.5"
+LineSearches = "7"
 Lux = "1.8"
+MLUtils = "0.4"
 Muninn = "0.6"
+Optim = "1"
+Optimisers = "0.4"
+Optimization = "4"
+OptimizationOptimJL = "0.4"
+OptimizationOptimisers = "0.3"
 OrdinaryDiffEq = "6.90.1"
 OrdinaryDiffEqSymplecticRK = "=1.1.0"
 PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3, 4"
 ProgressMeter = "1"
+Reexport = "1"
 Revise = "3.5"
+SciMLBase = "2"
 SciMLSensitivity = "7.20"
 Sleipnir = "0.9"
 Statistics = "1"
 Tullio = "0.3"
+Zygote = "0.7"
 julia = "1.10"
 
 [extras]
