--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,7 @@ jobs:
       pull-requests: read
       statuses: write
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'CI needs new release') }}
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
