--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Build Julia packages
         uses: julia-actions/julia-buildpkg@v1
       - name: Run tests
-        uses: julia-actions/julia-runtest@v1
+        run: julia -p 4 --project -e 'using Pkg; Pkg.test()'
       # - name: Performance benchmark
       #   id: generate-comment
       #   run: |
