--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
 Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
@@ -67,6 +68,7 @@ Infiltrator = "1.2"
 Interpolations = "0.15.1"
 JLD2 = "0.4, 0.5"
 LineSearches = "7"
+LiveServer = "1.5.0"
 Lux = "1.8"
 MLUtils = "0.4"
 Muninn = "0.7"
