--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -67,6 +68,7 @@ IJulia = "1.2"
 ImageFiltering = "0.7"
 Infiltrator = "1.2"
 Interpolations = "0.15.1"
+JET = "0.9.18"
 JLD2 = "0.4, 0.5"
 LineSearches = "7"
 Lux = "1.8"
