Docs format improved and references added

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
@@ -7,5 +8,5 @@ LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 ODINN = "c36d5296-eba1-40be-a153-0a8fa632a659"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
-[sources.ODINN]
-path = ".."
+[sources]
+ODINN = {path = ".."}
