--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,10 +1,14 @@
-name: Run Tests
+name: Full tests
 on:
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - 'docs/**'
   push:
     branches: [ "main" ]
     tags: '*'
+    paths-ignore:
+      - 'docs/**'
 env:
   PR_NUMBER: ${{ github.event.number }}
 permissions:
@@ -105,3 +109,4 @@ jobs:
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           files: lcov.info
+          fail_ci_if_error: true
