--- a/Project.toml
+++ b/Project.toml
@@ -49,6 +49,7 @@ SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 SciMLStructures = "53ae85a6-f571-4167-b2af-e1d143709226"
 Sleipnir = "f5e6c550-199f-11ee-3608-394420200519"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
@@ -90,6 +91,7 @@ SciMLBase = "2"
 SciMLSensitivity = "7.88"
 Sleipnir = "0.10.5"
 Statistics = "1"
+TensorBoardLogger = "0.1"
 Tullio = "0.3"
 Zygote = "0.7"
 julia = "1.10"
