--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,11 +1,13 @@
 name: Full tests
 on:
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
     paths-ignore:
       - 'docs/**'
   push:
-    branches: [ "main" ]
+    branches:
+      - main
     tags: '*'
     paths-ignore:
       - 'docs/**'
