Fix multigracier problem and some small changes

--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
 Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
