--- a/.github/workflows/CI_fast.yml
+++ b/.github/workflows/CI_fast.yml
@@ -68,6 +68,8 @@ jobs:
           - Core5
           - Core6
           - Core7
+          - Core8
+          - Core9
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
