CompatHelper: add new compat entry for SciMLStructures at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -89,6 +89,7 @@ Reexport = "1"
 Revise = "3.5"
 SciMLBase = "2"
 SciMLSensitivity = "7.88"
+SciMLStructures = "1"
 Sleipnir = "0.10.5"
 Statistics = "1"
 TensorBoardLogger = "0.1"
