--- a/Project.toml
+++ b/Project.toml
@@ -68,7 +68,7 @@ Huginn = "0.10.6"
 IJulia = "1.2"
 ImageFiltering = "0.7"
 Infiltrator = "1.2"
-Interpolations = "0.15.1"
+Interpolations = "0.15.1, 0.16"
 JET = "0.9.18"
 JLD2 = "0.4, 0.5"
 LineSearches = "7"
