CompatHelper: bump compat for JET to 0.10, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -69,7 +69,7 @@ IJulia = "1.2"
 ImageFiltering = "0.7"
 Infiltrator = "1.2"
 Interpolations = "0.15.1"
-JET = "0.9.18"
+JET = "0.9.18, 0.10"
 JLD2 = "0.4, 0.5"
 LineSearches = "7"
 Lux = "1.8"
