--- a/Project.toml
+++ b/Project.toml
@@ -57,6 +57,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
 ComponentArrays = "0.15"
+DiffEqCallbacks = "4"
 Downloads = "1"
 Enzyme = "0.13"
 EnzymeCore = "0.8"
