--- a/Project.toml
+++ b/Project.toml
@@ -81,7 +81,7 @@ Optimization = "4"
 OptimizationOptimJL = "0.4"
 OptimizationOptimisers = "0.3"
 OrdinaryDiffEq = "6.90.1"
-OrdinaryDiffEqSymplecticRK = "=1.1.0"
+OrdinaryDiffEqSymplecticRK = "=1.1.0, 1"
 PlotThemes = "3.1"
 Plots = "1.2"
 ProgressMeter = "1"
