CompatHelper: bump compat for JLD2 to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -70,7 +70,7 @@ ImageFiltering = "0.7"
 Infiltrator = "1.2"
 Interpolations = "0.15.1"
 JET = "0.9.18"
-JLD2 = "0.4, 0.5"
+JLD2 = "0.4, 0.5, 0.6"
 LineSearches = "7"
 Lux = "1.8"
 MLUtils = "0.4"
