--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ EnzymeCore = "0.8"
 FastGaussQuadrature = "1"
 FiniteDifferences = "0.12"
 GR = "0.71, 0.72, 0.73"
-GeoStats = "0.73.4, 0.78"
+GeoStats = "0.73.4, 0.78, 0.82"
 Huginn = "0.10.6"
 IJulia = "1.2"
 ImageFiltering = "0.7"
