CompatHelper: add new compat entry for Distributions at version 0.25, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -60,6 +60,7 @@ BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
 ComponentArrays = "0.15"
 DiffEqCallbacks = "4"
+Distributions = "0.25"
 Downloads = "1"
 Enzyme = "0.13"
 EnzymeCore = "0.8"
