--- a/Project.toml
+++ b/Project.toml
@@ -76,6 +76,7 @@ JET = "0.9.18"
 JLD2 = "0.4, 0.5, 0.6"
 LineSearches = "7"
 Lux = "1.8"
+MLStyle = "0.4"
 MLUtils = "0.4"
 Muninn = "0.7"
 Optim = "1"
