--- a/Project.toml
+++ b/Project.toml
@@ -64,13 +64,13 @@ EnzymeCore = "0.8"
 FastGaussQuadrature = "1"
 FiniteDifferences = "0.12"
 GR = "0.71, 0.72, 0.73"
-GeoStats = "0.73.4, 0.78"
+GeoStats = "0.73.4, 0.78, 0.82"
 Huginn = "0.10.6"
 IJulia = "1.2"
 ImageFiltering = "0.7"
 Infiltrator = "1.2"
-Interpolations = "0.15.1"
-JET = "0.9.18"
+Interpolations = "0.15.1, 0.16"
+JET = "0.9.18, 0.10"
 JLD2 = "0.4, 0.5"
 LineSearches = "7"
 Lux = "1.8"
