--- a/Project.toml
+++ b/Project.toml
@@ -61,6 +61,7 @@ BenchmarkTools = "1.3.2"
 ChainRules = "1.50"
 ComponentArrays = "0.15"
 DiffEqCallbacks = "4"
+Distributions = "0.25"
 Downloads = "1"
 Enzyme = "0.13"
 EnzymeCore = "0.8"
@@ -78,6 +79,7 @@ JLD2 = "0.4, 0.5, 0.6"
 LineSearches = "7"
 Lux = "1.8"
 MLUtils = "0.4"
+MLStyle = "0.4"
 Muninn = "0.7"
 Optim = "1"
 Optimisers = "0.4"
