CompatHelper: bump compat for Optimization to 5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -80,7 +80,7 @@ MLUtils = "0.4"
 Muninn = "0.7"
 Optim = "1"
 Optimisers = "0.4"
-Optimization = "4"
+Optimization = "4, 5"
 OptimizationOptimJL = "0.4"
 OptimizationOptimisers = "0.3"
 OrdinaryDiffEq = "6.90.1"
