CompatHelper: bump compat for Sleipnir to 0.11, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -93,7 +93,7 @@ Revise = "3.5"
 SciMLBase = "2"
 SciMLSensitivity = "7.88"
 SciMLStructures = "1"
-Sleipnir = "0.10.7"
+Sleipnir = "0.10.7, 0.11"
 Statistics = "1"
 TensorBoardLogger = "0.1"
 Tullio = "0.3"
