--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,6 @@ Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
-OrdinaryDiffEqSymplecticRK = "fa646aed-7ef9-47eb-84c4-9443fc8cbfa8"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -55,7 +54,7 @@ Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-BenchmarkTools = "1.3.2"
+BenchmarkTools = "1"
 ChainRules = "1.50"
 ComponentArrays = "0.15"
 DiffEqCallbacks = "4"
@@ -65,33 +64,32 @@ EnzymeCore = "0.8"
 FastGaussQuadrature = "1"
 FiniteDifferences = "0.12"
 GR = "0.71, 0.72, 0.73"
-GeoStats = "0.73.4, 0.78"
-Huginn = "0.10.9"
+GeoStats = "0.78, 0.79, 0.80, 0.81, 0.82"
+Huginn = "0.11.0"
 ImageFiltering = "0.7"
-Infiltrator = "1.2"
+Infiltrator = "1.8"
 Interpolations = "0.15.1"
-JET = "0.9.18"
+JET = "0.9, 0.10"
 JLD2 = "0.4, 0.5, 0.6"
 LineSearches = "7"
 Lux = "1.8"
 MLUtils = "0.4"
-Muninn = "0.7"
+Muninn = "0.8"
 Optim = "1"
 Optimisers = "0.4"
 Optimization = "5"
 OptimizationOptimJL = "0.4"
 OptimizationOptimisers = "0.3"
-OrdinaryDiffEq = "6.90.1"
-OrdinaryDiffEqSymplecticRK = "=1.1.0"
+OrdinaryDiffEq = "6"
 PlotThemes = "3.1"
-Plots = "1.2"
+Plots = "1"
 ProgressMeter = "1"
 Reexport = "1"
-Revise = "3.5"
+Revise = "3"
 SciMLBase = "2"
 SciMLSensitivity = "7.88"
 SciMLStructures = "1"
-Sleipnir = "0.10.7"
+Sleipnir = "0.11.1"
 Statistics = "1"
 TensorBoardLogger = "0.1"
 Tullio = "0.3"
