--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,12 +1,16 @@
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
+Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
 ODINN = "c36d5296-eba1-40be-a153-0a8fa632a659"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Sleipnir = "f5e6c550-199f-11ee-3608-394420200519"
 
-[sources]
-ODINN = {path = ".."}
+[sources.ODINN]
+path = ".."
