CompatHelper: bump compat for Huginn to 0.11, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ODINN"
 uuid = "c36d5296-eba1-40be-a153-0a8fa632a659"
-authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>", "Facundo Sapienza <sapienza@stanford.edu>", "Alban Gossard <alban.paul.gossard@gmail.com>"]
 version = "0.3.0"
+authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>", "Facundo Sapienza <sapienza@stanford.edu>", "Alban Gossard <alban.paul.gossard@gmail.com>"]
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -67,7 +67,7 @@ FastGaussQuadrature = "1"
 FiniteDifferences = "0.12"
 GR = "0.71, 0.72, 0.73"
 GeoStats = "0.73.4, 0.78"
-Huginn = "0.10.9"
+Huginn = "0.10.9, 0.11"
 IJulia = "1.2"
 ImageFiltering = "0.7"
 Infiltrator = "1.2"
