--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,7 @@ OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
@@ -58,6 +59,7 @@ BenchmarkTools = "1"
 ChainRules = "1.50"
 ComponentArrays = "0.15"
 DiffEqCallbacks = "4"
+Distributions = "0.25"
 Downloads = "1"
 Enzyme = "0.13"
 EnzymeCore = "0.8"
@@ -68,12 +70,13 @@ GeoStats = "0.78, 0.79, 0.80, 0.81, 0.82"
 Huginn = "0.11.0"
 ImageFiltering = "0.7"
 Infiltrator = "1.8"
-Interpolations = "0.15.1"
+Interpolations = "0.15.1, 0.16"
 JET = "0.9, 0.10"
 JLD2 = "0.4, 0.5, 0.6"
 LineSearches = "7"
 Lux = "1.8"
 MLUtils = "0.4"
+MLStyle = "0.4"
 Muninn = "0.8"
 Optim = "1"
 Optimisers = "0.4"
@@ -82,6 +85,7 @@ OptimizationOptimJL = "0.4"
 OptimizationOptimisers = "0.3"
 OrdinaryDiffEq = "6"
 PlotThemes = "3.1"
+PlotlyJS = "0.18"
 Plots = "1"
 ProgressMeter = "1"
 Reexport = "1"
