fix plot of laws in the documentation + issue with PlotlyJS on Ubuntu 24.04

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.3.0"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Blink = "ad839575-38b3-5650-b840-f874b8c74a25"
 ChainRules = "082447d4-558c-5d27-93f4-14fc19e9eca2"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -56,6 +57,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 BenchmarkTools = "1"
+Blink = "0.12"
 ChainRules = "1.50"
 ComponentArrays = "0.15"
 DiffEqCallbacks = "4"
@@ -75,8 +77,8 @@ JET = "0.9, 0.10"
 JLD2 = "0.4, 0.5, 0.6"
 LineSearches = "7"
 Lux = "1.8"
-MLUtils = "0.4"
 MLStyle = "0.4"
+MLUtils = "0.4"
 Muninn = "0.8"
 Optim = "1"
 Optimisers = "0.4"
