--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -8,6 +8,7 @@ Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
 ODINN = "c36d5296-eba1-40be-a153-0a8fa632a659"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Sleipnir = "f5e6c550-199f-11ee-3608-394420200519"
