--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -4,6 +4,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
