--- a/Project.toml
+++ b/Project.toml
@@ -73,7 +73,7 @@ Huginn = "0.11.0"
 ImageFiltering = "0.7"
 Infiltrator = "1.8"
 Interpolations = "0.15.1, 0.16"
-JET = "0.9, 0.10"
+JET = "0.9, 0.10, 0.11"
 JLD2 = "0.4, 0.5, 0.6"
 LineSearches = "7"
 Lux = "1.8"
