--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ docs/src/functional_inversion.md
 docs/src/quick_start.md
 docs/src/laws.md
 docs/src/vjp_laws.md
+docs/src/input_laws.md
 docs/laws_plots/
 docs/data/results/
 
