Customize the VJP functions in the laws (#395)
* fix prints in the documentation (#390)

* fix optimization dependency (#396)

* remove IJulia dependency

* update dependencies to support Julia 1.12 (#400)

* Update for laws and plotting utils (#347)

* refactor ODINN code to support laws

* update tests and MWE

* refactor MLmodel to allow having multiple regressors

* [WIP] Adding plots for laws and scalar option

* correct merge conflict

* refactor ODINN code to support laws

* update tests and MWE

* refactor MLmodel to allow having multiple regressors

* [WIP] Adding plots for laws and scalar option

* correct merge conflict

* [WIP] Improved plotting of laws

Still ongoing work, but getting to something more useable. I have also updated the names of the input variables in order to make them cleaner and practical.

* Add PlotlyJS for interactive 3D plotting

* Add topography roughness type in script

* Update script

* Update Project.toml and law docs

* Project.toml updated

* changes to fix the documentation

* fix documentation

---------

Co-authored-by: Alban Gossard <alban.paul.gossard@gmail.com>

* fix plot of laws in the documentation + issue with PlotlyJS on Ubuntu 24.04 (#407)

* try to use Mooncake instead of Zygote

* law API refactoring to allow the user to specify the VJP

* rename float law by scalar law

* update documentation

* fix overwriting method error

* fix Electron issue

* write custom cache documentation + fix bugs

* remove scalar option

* precompute gradient with Zygote for target A

* add instructions on how to debug frozen documentation

* minor changes to simplify the interface

* correct documentation following review

* add laws inputs tutorial

* update dependencies

---------

Co-authored-by: Jordi Bolibar <jordi.bolibar@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ docs/src/forward_simulation.md
 docs/src/functional_inversion.md
 docs/src/quick_start.md
 docs/src/laws.md
+docs/src/vjp_laws.md
+docs/src/input_laws.md
+docs/laws_plots/
 docs/data/results/
 
 # Core dump files
