--- a/scripts/Project.toml
+++ b/scripts/Project.toml
@@ -2,6 +2,8 @@
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Huginn = "9cb796e9-d0ea-421b-b37d-eb97bc1add55"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Muninn = "4b816528-16ba-4e32-9a2e-3c1bc2049d3a"
@@ -10,3 +12,4 @@ PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 Sleipnir = "f5e6c550-199f-11ee-3608-394420200519"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
