some changes in the documentation and in the tests

--- a/.github/workflows/CI_fast.yml
+++ b/.github/workflows/CI_fast.yml
@@ -70,6 +70,7 @@ jobs:
           - Core7
           - Core8
           - Core9
+          - Core10
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
