--- a/Project.toml
+++ b/Project.toml
@@ -58,51 +58,51 @@ Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-BenchmarkTools = "1"
-Blink = "0.12"
-ChainRules = "1"
-ComponentArrays = "0.15"
-DiffEqCallbacks = "4"
-Distributions = "0.25"
+BenchmarkTools = "1.6.3"
+Blink = "0.12.9"
+ChainRules = "1.72.6"
+ComponentArrays = "0.15.29"
+DiffEqCallbacks = "4.10.1"
+Distributions = "0.25.122"
 Downloads = "1"
-Enzyme = "0.13"
-EnzymeCore = "0.8"
-FastGaussQuadrature = "1"
-FiniteDifferences = "0.12"
-GR = "0.71, 0.72, 0.73"
-GeoStats = "0.78, 0.79, 0.80, 0.81, 0.82"
+Enzyme = "0.13.87"
+EnzymeCore = "0.8.14"
+FastGaussQuadrature = "1.1.0"
+FiniteDifferences = "0.12.33"
+GR = "0.73.17"
+GeoStats = "0.81.3"
 Huginn = "0.11.3"
-ImageFiltering = "0.7"
-Infiltrator = "1.8, 1.9"
-Interpolations = "0.15, 0.16"
-JET = "0.9, 0.10"
-JLD2 = "0.4, 0.5, 0.6"
-LineSearches = "7"
-Lux = "1"
-MLStyle = "0.4"
-MLUtils = "0.4"
-Mooncake = "0.4"
-Muninn = "0.8"
-Optim = "1"
-Optimisers = "0.4"
-Optimization = "5"
-OptimizationOptimJL = "0.4"
-OptimizationOptimisers = "0.3"
-OrdinaryDiffEq = "6"
-PlotThemes = "3"
-PlotlyJS = "0.18"
-Plots = "1"
-ProgressMeter = "1"
-Reexport = "1"
-Revise = "3"
-SciMLBase = "2"
-SciMLSensitivity = "7.90"
-SciMLStructures = "1"
+ImageFiltering = "0.7.12"
+Infiltrator = "1.9.3"
+Interpolations = "0.15.1"
+JET = "0.9.18"
+JLD2 = "0.6.2"
+LineSearches = "7.4.0"
+Lux = "1.21.1"
+MLStyle = "0.4.17"
+MLUtils = "0.4.8"
+Mooncake = "0.4.173"
+Muninn = "0.8.2"
+Optim = "1.13.2"
+Optimisers = "0.4.6"
+Optimization = "5.0.0"
+OptimizationOptimJL = "0.4.6"
+OptimizationOptimisers = "0.3.13"
+OrdinaryDiffEq = "6.102.1"
+PlotThemes = "3.3.0"
+PlotlyJS = "0.18.17"
+Plots = "1.41.1"
+ProgressMeter = "1.11.0"
+Reexport = "1.2.2"
+Revise = "3.7.5"
+SciMLBase = "2.122.0"
+SciMLSensitivity = "7.90.0"
+SciMLStructures = "1.7.0"
 Sleipnir = "0.11.2"
-Statistics = "1"
-TensorBoardLogger = "0.1"
-Tullio = "0.3"
-Zygote = "0.7"
+Statistics = "1.10.0"
+TensorBoardLogger = "0.1.26"
+Tullio = "0.3.8"
+Zygote = "0.7.10"
 julia = "1.10"
 
 [extras]
