Fix small issue with tstops in loss evaluation (#433)
* ignore DS_Store files

* ignore more files

* remove DS_file from repo

* fix open issue

* Fix zero loss contribution

* fix runtime dispatch which was slowing down the code

---------

Co-authored-by: Alban Gossard <alban.paul.gossard@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Manifest.toml
 # ODINN specific files
 scripts/plots/
 scripts/.CondaPkg/
+scripts/.DS_Store
 benchmark/results.txt
 plots/MB/
 plots/training/
@@ -48,7 +49,7 @@ docs/data/results/
 *.gz
 *.bz2
 .coverage
-.DS_Store
+*/.DS_Store
 Untitled*.ipynb
 *.aux
 *.bbl
