--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ODINN"
 uuid = "c36d5296-eba1-40be-a153-0a8fa632a659"
-authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>", "Facundo Sapienza <sapienza@stanford.edu>", "Alban Gossard <alban.paul.gossard@gmail.com>"]
 version = "0.3.0"
+authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>", "Facundo Sapienza <sapienza@stanford.edu>", "Alban Gossard <alban.paul.gossard@gmail.com>"]
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -63,6 +63,7 @@ Blink = "0.12"
 ChainRules = "1"
 ComponentArrays = "0.15"
 DiffEqCallbacks = "4"
+DifferentiationInterface = "0.7"
 Distributions = "0.25"
 Downloads = "1"
 Enzyme = "0.13"
