improve when the CI triggers

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,12 +5,14 @@ on:
       - main
     paths-ignore:
       - 'docs/**'
+      - 'scripts/**'
   push:
     branches:
       - main
     tags: '*'
     paths-ignore:
       - 'docs/**'
+      - 'scripts/**'
 env:
   PR_NUMBER: ${{ github.event.number }}
 permissions:
