--- a/Project.toml
+++ b/Project.toml
@@ -71,7 +71,7 @@ EnzymeCore = "0.8"
 FastGaussQuadrature = "1"
 FiniteDifferences = "0.12"
 GR = "0.71, 0.72, 0.73"
-GeoStats = "0.78, 0.79, 0.80, 0.81, 0.82"
+GeoStats = "0.78, 0.79, 0.80, 0.81, 0.82, 0.84"
 Huginn = "0.12.5"
 ImageFiltering = "0.7"
 Infiltrator = "1.8, 1.9"
